--- a/css/tribe.css
+++ b/css/tribe.css
@@ -86,3 +86,61 @@ h1,h2,h3,h4,h5,h6{
 	text-align: center;
 	margin-left: 40px;
 }
+
+.courses{
+	margin-top: -2em;
+}
+
+.course__item{
+	width: 100%;
+	height: 250px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: relative;
+	cursor: pointer;
+
+}
+
+.courses__title{
+	position: absolute;
+	bottom: 0;
+	left: 20px;
+	z-index: 1;
+}
+
+.courses__title h2{
+	margin-bottom: 0;
+}
+
+.course__item:after{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: -webkit-linear-gradient(rgba(255,255,255,0) 3%, black);
+	background: -o-linear-gradient(rgba(255,255,255,0) 3%, black);
+	background: linear-gradient(rgba(255,255,255,0) 3%, black);
+}
+
+.icon__course{
+	background: url('../img/icons/iconos_landing.png') no-repeat -6px -11px;
+	width: 40px;
+	height: 38px;
+	margin-bottom: 10px;
+}
+
+.icon__device{
+	background: url('../img/icons/iconos_landing.png') no-repeat -63px -11px;
+	width: 50px;
+	height: 39px;
+	margin-bottom: 10px;
+}
+
+.icon__certificate{
+	background: url('../img/icons/iconos_landing.png') no-repeat -130px -8px;
+	width: 44px;
+	height: 44px;
+	margin-bottom: 10px;
+}
+
