--- a/css/tribe.css
+++ b/css/tribe.css
@@ -144,3 +144,34 @@ h1,h2,h3,h4,h5,h6{
 	margin-bottom: 10px;
 }
 
+/*COURSE LARGE*/
+
+.course__item--large{
+	width: 100%;
+	height: 400px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: relative;
+	cursor: pointer;
+
+}
+
+.course__item--large:after{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: -webkit-linear-gradient(rgba(255,255,255,0) 3%, black);
+	background: -o-linear-gradient(rgba(255,255,255,0) 3%, black);
+	background: linear-gradient(rgba(255,255,255,0) 3%, black);
+}
+
+
+/*TESTIMONIALES*/
+
+.testimonial__card{
+	background: #fff;
+	color: #291F5B;
+	padding-top: 20px;
+}
