--- a/css/tribe.css
+++ b/css/tribe.css
@@ -175,3 +175,48 @@ h1,h2,h3,h4,h5,h6{
 	color: #291F5B;
 	padding-top: 20px;
 }
+
+
+.register{
+	width: 100%;
+	background-image: url(../img/online_bg.jpg);
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	z-index: -1;
+	margin-bottom: 0;
+}
+
+.register::after{
+	content: "";
+	width: 100%;
+	height:100%;
+	position: absolute;
+	top: 0;
+	background: rgba(27,20,64,0.5);
+	z-index: -1;
+	mix-blend-mode: multiply;
+}
+
+
+.register__content{
+	color: #fff;
+	margin-top: 10em;
+	margin-bottom: 10em;
+	z-index: 2;
+}
+
+footer{
+	width: 100%;
+	background: #130F27;
+	color: #fff;
+	padding: 30px 0;
+}
+
+footer a{
+	color: #fff;
+	margin-right: 10px;
+}
+
